Added new rermode data base connection properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,10 @@
 spring.jpa.hibernate.ddl-auto=none
 logging.level.org.springframework.jdbc.datasource.init.ScriptUtils=debug
 
+loggin.level.org.hibernate.engine.jdbc.env.internal.LobCreatorBuilderImpl = error
+
+spring.jpa.database = postgresql
+spring.datasource.platform = postgres
+spring.datasource.url = jdbc:postgresql://localhost:5432/dev
+spring.datasource.username = postgres
+spring.datasource.password = postgres
